<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".features.search.SearchCityFragment">

    <TextView
        android:id="@+id/textViewTitleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/causten_round"
        android:text="@string/title_search_text"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSearchCities"
        style="@style/SearchStyle"
        android:background="@drawable/bg_input_search"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleSearch" />

    <!-- recent searches list region -->
    <TextView
        android:id="@+id/textViewRecentSearches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/causten_round"
        android:text="@string/title_recent_searches_text"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSearchCities"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecentSearches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="6dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecentSearches"
        tools:itemCount="3"
        tools:listitem="@layout/item_view_recent_searches"
        tools:visibility="visible" />

    <!-- results search region -->
    <TextView
        android:id="@+id/textViewSearchResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/causten_round"
        android:text="@string/title_search_results_text"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewRecentSearches" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearchResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchResults"
        tools:itemCount="5"
        tools:listitem="@layout/item_view_search_city" />

    <TextView
        android:id="@+id/textViewMessageStartSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/causten_round"
        android:text="@string/message_start_search_text"
        android:textColor="@color/colorSecondary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchResults"
        tools:visibility="invisible" />

    <ProgressBar
        android:id="@+id/searchProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- info when search results is empty -->
    <View
        android:id="@+id/backGroundViewNotSearchResults"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_empty_search"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewNotSearchResults"
        app:layout_constraintEnd_toEndOf="@+id/imageViewNotSearchResults"
        app:layout_constraintStart_toStartOf="@+id/imageViewNotSearchResults"
        app:layout_constraintTop_toTopOf="@+id/imageViewNotSearchResults" />

    <ImageView
        android:id="@+id/imageViewNotSearchResults"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/generic_content_description"
        android:src="@drawable/ic_search"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchResults" />

    <TextView
        android:id="@+id/textViewNotSearchResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/causten_round"
        android:gravity="center_horizontal"
        android:text="@string/not_results_search_text"
        android:textColor="@color/colorSecondary"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/backGroundViewNotSearchResults"
        app:layout_constraintStart_toStartOf="@+id/backGroundViewNotSearchResults"
        app:layout_constraintTop_toBottomOf="@+id/backGroundViewNotSearchResults" />

</androidx.constraintlayout.widget.ConstraintLayout>